@@ -1,3 +1,7 @@
+2009-09-30  Roland McGrath  <roland@redhat.com>
+
+	* dwarfcmp.cc: Support four-argument usage to compare specific entries.
+
 2009-09-15  Roland McGrath  <roland@redhat.com>
 
 	* dwarfcmp.cc (talker, noisy_cmp): Describe context mismatch details
